--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,45 +32,6 @@ i.fa-globe, i.fa-location-crosshairs, i.fa-cart-shopping {
     border-radius: 0.5rem;
     background-color: #fff;
 }
-@media (max-width: 991.98px) { 
-    #ftco-nav {
-        margin-top: 1rem!important;
-    }
-    
-    .searchform {
-        width: 70px;
-    }
-    
-    .form-group {
-        width: 50px;
-    }
-
-    .dropdown-menu{
-        display: none;
-    }
-}
-
-
-.search-input, .search-icon {
-    display: block;
-    width: 100%;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    background-color: transparent;
-    border: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0.25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-.search-input:focus-visible{
-    outline: none;
-}
 
 .search-icon {
     width: 40px;
@@ -82,17 +43,6 @@ i.fa-globe, i.fa-location-crosshairs, i.fa-cart-shopping {
     z-index: 100;
 }
 
-.navbar-brand {
-    font-family: Quicksand, sans-serif;
-    font-weight: bold;
-}
-
-a.navbar-brand:hover {
-    transition: .3s;
-    color: #e71e26!important;
-    text-decoration: none!important;
-}
-
 .navbar-nav .nav-item {
     padding: 0 0.5rem;
     margin: 0 0.2rem;
@@ -102,28 +52,18 @@ a.navbar-brand:hover {
 .navbar-nav .nav-item .nav-link {
     color: #383838;
     font-weight: 700;
-}
-
-.navbar-nav .nav-link:hover,
-.navbar-nav a.dropdown-item:hover {
-    text-decoration: none!important;
-    transition: .3s;
-}
-
-.navbar-nav a.dropdown-item:hover{
-    transition: .3s;
-    background-color: rgba(0,0,0,0.1);
-
+    padding: 0 1rem!important;
+    line-height: 40px;
 }
 
 .navbar-nav .nav-item:hover {
-    border-radius: .3rem;
     transition: .5s;
-    background-color: rgba(0,0,0,0.08)!important;
+    background-color: rgba(0,0,0,0.7)!important;
 }
 
 .navbar-nav .nav-item:hover .nav-link {
-    color: #689800!important;
+    color: white!important;
+    text-decoration: none!important;
 }
 
 .navbar-nav .dropdown-menu {
@@ -193,18 +133,6 @@ a.navbar-brand:hover {
     font-size: .7rem;
 }
 
-.trending-photo img {
-    width: 90%;
-}
-
-@media (max-width: 575.98px) {
-    .trending-photo img {
-        width: 100%;
-    }
-}
-    
-
-
 .text-title h1 {
     font-family: 'Josefin Sans', cursive;
     font-size: 2.5rem;
@@ -230,11 +158,12 @@ a.navbar-brand:hover {
 
 a.oder {
    font-weight: 600;
+   background-color: #ffd643;
+   transition: .3s ease;
 }
 a.oder:hover {
     text-decoration: none!important;
-    color: #fff!important;
-    background-color: #363636!important;
+    background-color: #ff9900!important;
 }
 
 a.oder:focus {
@@ -255,14 +184,15 @@ a.oder:focus {
 /* Add to cart popup */
 .toast {
     background-color: #fff!important;
-    border: 1px solid #e71e26;
+    border: none!important;
+    border-radius: 1rem;
 }
 
 .toast-header {
     font-weight: bolder;
-    background-color: #e71e26;
-    color: white;
-    border: none;
+    background-color: #ffd643;
+    border-top-left-radius: 1rem!important;
+    border-top-right-radius: 1rem!important;
 }
 
 
@@ -303,15 +233,15 @@ footer, .email-input, .email-input-submit{
 
 .signup-login button{
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 2px solid #fff;
+    background-color: #ff9900;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
     padding: 12px 45px;
     letter-spacing: 1px;
     text-transform: uppercase;
-    transition: transform 80ms ease-in;
+    transition: .2s ease-in;
 }
 
 .signup-login button:active {
@@ -320,6 +250,10 @@ footer, .email-input, .email-input-submit{
   
 .signup-login button:focus {
     outline: none;
+}
+
+.signup-login button:hover {
+    background-color: #db8400;
 }
   
 .signup-login button.ghost {
@@ -404,13 +338,13 @@ footer, .email-input, .email-input-submit{
 }
 
 .signup-login .overlay {
-  background: #FF416C;
-  background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-  background: linear-gradient(to right, #FF4B2B, #FF416C);
+  background: #ffd643;
+  background: -webkit-linear-gradient(to right, #ffae00, #ff9900);
+  background: linear-gradient(to right, #ffae00, #ff9900);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
-  color: #FFFFFF;
+  color: black;
   position: relative;
   left: -100%;
   height: 100%;
