I dont know what i did

--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -173,15 +173,14 @@ label {
   background-color: rgb(240, 240, 240);
   color: #000;
   border: solid 1px;
-  line-height: 1.2rem;
-  border-radius: .3rem;
+  line-height: 1.8rem;
+  border-radius: 50rem;
   float: none;
-  text-transform: uppercase;
 }
 
 .remove button:hover {
     transition: .3s;
-    background-color: #111;
+    background-color: #ef3f1d;
     color: #fff;
 }
 
@@ -242,8 +241,7 @@ aside {
   border: 1px solid rgb(225, 225, 225);
   border-radius: .5rem;
   padding: 1rem;
-  position: fixed;
-  width: 23%;
+  width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -315,9 +313,9 @@ aside {
 }
 
 .checkout-cta {
+  background-color: #ff9900;
   display: block;
   float: none;
-  border: solid 1px;
   border-radius: .5rem;
   font-size: 0.9rem;
   text-align: center;
@@ -328,14 +326,14 @@ aside {
 
 .checkout-cta:hover {
     transition: .3s;
-    background-color: rgba(0, 0, 0, .75);
+    background-color: #db8400;
     color: #fff;
 }
 
 .summary-delivery-selection {
   background-color: #ccc;
   border: 1px solid #aaa;
-  border-radius: 4px;
+  border-radius: 50rem;
   display: block;
   font-size: 0.9rem;
   height: 34px;
@@ -360,7 +358,7 @@ aside {
     margin-bottom: 1rem;
   }
   .product-image {
-    width: 40%;
+    width: 30%;
   }
   .product-details {
     width: 60%;
@@ -388,6 +386,9 @@ aside {
   .summary {
     margin-top: 1.25rem;
     position: relative;
+  }
+  .basket {
+    min-height: 0;
   }
 }
 
