--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -190,7 +190,7 @@ a.oder:focus {
 
 .toast-header {
     font-weight: bolder;
-    background-color: #ffd643;
+    background-color: #ef3f1d;
     border-top-left-radius: 1rem!important;
     border-top-right-radius: 1rem!important;
 }
