--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -198,7 +198,7 @@ label {
 }
 
 .product-image {
-  width: 35%;
+  width: 25%;
 }
 
 .product-details {
@@ -223,7 +223,7 @@ label {
 .quantity-field {
   background-color: rgb(240, 240, 240);
   border: none;
-  border-radius: 4px;
+  border-radius: 50rem;
   font-size: 0.9rem;
   padding: 2px;
   padding-left: 15px!important;
@@ -358,7 +358,7 @@ aside {
     margin-bottom: 1rem;
   }
   .product-image {
-    width: 30%;
+    width: 20%;
   }
   .product-details {
     width: 60%;
