--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,9 +23,7 @@ a:hover {
     z-index: 50;
 }
 
-i.fa-globe, i.fa-location-crosshairs, i.fa-cart-shopping {
-    padding: 0 0.25rem;
-}
+
 
 .form-group, .navbar-toggler{
     border: solid 1px rgba(0,0,0,0.08)!important;
@@ -33,9 +31,6 @@ i.fa-globe, i.fa-location-crosshairs, i.fa-cart-shopping {
     background-color: #fff;
 }
 
-.search-icon {
-    width: 40px;
-}
 
 .navbar {
     line-height: 3rem;
@@ -91,11 +86,9 @@ i.fa-globe, i.fa-location-crosshairs, i.fa-cart-shopping {
 .spinner{
     width: 40px;
     height: 40px;
-    
     border: 2px solid #f3f3f3;
     border-top:3px solid #000000;
     border-radius: 100%;
-    
     position: fixed;
     top: 0;
     bottom: 0;
@@ -112,25 +105,6 @@ i.fa-globe, i.fa-location-crosshairs, i.fa-cart-shopping {
     }to{
         transform: rotate(360deg);
     }
-}
-.pushdown {
-    height: 6.4rem;
-}
-
-.hot-ads{
-    background-color: #cdcdcd;
-    height: 3.7rem!important;
-}
-
-.hot-ads .carousel-item p {
-    font-weight: 600;
-    font-size: .9rem;
-    margin: .3rem 0 -0.5rem 0;
-    padding: 0;
-}
-
-.hot-ads .carousel-item span{
-    font-size: .7rem;
 }
 
 .text-title h1 {
@@ -173,7 +147,6 @@ a.oder:focus {
 .span.visually-hidden{
      z-index: 2;
  }
-
 
 .carousel-control-prev, .carousel-control-next {
     filter: invert(100%);
@@ -463,4 +436,13 @@ input.form-control::placeholder {
 
 .dropdown-item:hover {
     text-decoration: none!important;
+}
+
+.form-control:focus {
+    box-shadow: none;
+    border-color: black;
+}
+
+.btn:focus {
+    box-shadow: none;
 }
